[CoordinatedGraphics] Fix deadlock when media thread is trying to push a buffer while main thread is flushing layers https://bugs.webkit.org/show_bug.cgi?id=302068

Reviewed by Nikolas Zimmermann.

During the layer flush the CoordinatedPlatformLayer lock is held and
CoordinatedPlatformLayerBufferProxy::setDisplayBuffer needs to take the
lock to push the new buffer too.
CoordinatedPlatformLayerBufferProxy::consumePendingBufferIfNeeded(),
called during layer flush from main thread waits on the proxy lock that
is held by CoordinatedPlatformLayerBufferProxy::setDisplayBuffer which
is waiting for the CoordinatedPlatformLayer lock. We need to release the
proxy lock before taking the layer's one.

Canonical link: https://commits.webkit.org/302647@main